snapshots/syntax/library/functions/graphics/spc/spc_nested_function.snap
---
source: vb6parse/src/syntax/library/functions/graphics/spc.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: DimStatement
              children:
                - kind: DimKeyword
                  text: Dim
                - kind: Whitespace
                  text: " "
                - kind: WidthKeyword
                  text: width
                - kind: Whitespace
                  text: " "
                - kind: AsKeyword
                  text: As
                - kind: Whitespace
                  text: " "
                - kind: IntegerKeyword
                  text: Integer
                - kind: Newline
                  text: "\n"
            - kind: WidthStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: WidthKeyword
                  text: width
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: IntegerLiteral
                  text: "20"
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: CallStatement
              children:
                - kind: Identifier
                  text: Debug
                - kind: PeriodOperator
                  text: "."
                - kind: PrintKeyword
                  text: Print
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"Item\""
                    - kind: Semicolon
                      text: ;
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: CallExpression
                          children:
                            - kind: Identifier
                              text: Spc
                            - kind: LeftParenthesis
                              text: (
                            - kind: ArgumentList
                              children:
                                - kind: Argument
                                  children:
                                    - kind: BinaryExpression
                                      children:
                                        - kind: IdentifierExpression
                                          children:
                                            - kind: WidthKeyword
                                              text: width
                                        - kind: Whitespace
                                          text: " "
                                        - kind: SubtractionOperator
                                          text: "-"
                                        - kind: Whitespace
                                          text: " "
                                        - kind: CallExpression
                                          children:
                                            - kind: LenKeyword
                                              text: Len
                                            - kind: LeftParenthesis
                                              text: (
                                            - kind: ArgumentList
                                              children:
                                                - kind: Argument
                                                  children:
                                                    - kind: StringLiteralExpression
                                                      children:
                                                        - kind: StringLiteral
                                                          text: "\"Item\""
                                            - kind: RightParenthesis
                                              text: )
                            - kind: RightParenthesis
                              text: )
                    - kind: Semicolon
                      text: ;
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"Value\""
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
