snapshots/syntax/library/functions/graphics/spc/spc_with_statement.snap
---
source: vb6parse/src/syntax/library/functions/graphics/spc.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: WithStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: WithKeyword
                  text: With
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: reporter
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: PrintStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: PrintKeyword
                          text: Print
                        - kind: Whitespace
                          text: " "
                        - kind: Octothorpe
                          text: "#"
                        - kind: PeriodOperator
                          text: "."
                        - kind: Identifier
                          text: FileNum
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: StringLiteral
                          text: "\"Name\""
                        - kind: Semicolon
                          text: ;
                        - kind: Whitespace
                          text: " "
                        - kind: Identifier
                          text: Spc
                        - kind: LeftParenthesis
                          text: (
                        - kind: IntegerLiteral
                          text: "10"
                        - kind: RightParenthesis
                          text: )
                        - kind: Semicolon
                          text: ;
                        - kind: Whitespace
                          text: " "
                        - kind: StringLiteral
                          text: "\"Value\""
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: WithKeyword
                  text: With
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
